Fixed S security issues :)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,10 @@ spring.datasource.url=jdbc:postgresql://localhost/salebook
 spring.datasource.username=salebook
 spring.datasource.password=salebook
 spring.jpa.generate-ddl=true
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
-
+upload.path=/Users/vassilimoskaljov/Desktop/My Fork/SalesBook/upp
 spring.freemarker.expose-request-attributes=true
-#spring.freemarker.cache=false
+spring.freemarker.cache=false
 
 #spring.jpa.show-sql=false
-
-#hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-#hibernate.show_sql=false
-#hibernate.format_sql=true
